chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: webhook
  name: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      name: webhook
  template:
    metadata:
      labels:
        name: webhook
    spec:
      containers:
      imagePullSecrets:
        - name: cr-token
      restartPolicy: Always
