chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: webhook-service
  name: webhook-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: webhook
