chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-ingress
  labels:
  annotations:
    kubernetes.io/ingress.class: 'kong'
spec:
  rules:
    - host: webhook.krateo.io
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: webhook-service
                port:
                  number: 80
